--- a/css/styles.css
+++ b/css/styles.css
@@ -73,8 +73,6 @@ img {
 
 /* Стилізація header основної сторінки та портфоліо */
 .header {
-    /* padding-top: 32px; */
-    /* padding-bottom: 32px; */
     border-bottom: 1px solid #ECECEC;
     background-color:var(--one-background-color);
 }
@@ -97,6 +95,7 @@ img {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
+    position: relative;
 }
 
 .item:not(:last-child){
@@ -110,10 +109,25 @@ img {
     font-size: 14px;
     line-height: 1.143;
     letter-spacing: 0.02em;
+    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .current {
     color:var(--accent-color);
+}
+
+.nav-item.current::after {
+    display: inline-block;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
 }
 
 .nav-item:hover,
@@ -134,6 +148,8 @@ img {
     font-size: 14px;
     line-height: 1.143;
     letter-spacing: 0.02em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover,
@@ -271,9 +287,36 @@ img {
     margin-right: -30px;
 }
 
+.work-label {
+    position: relative;
+}
+
 .work-img {
     flex-basis: calc((100% - 90px)/3);
     margin-right: 30px;
+}
+
+.work-box {
+    position: absolute;
+    display: flex;
+    width: 370px;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    bottom: 0;
+}
+
+.work-name {
+    position: absolute;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--one-background-color);
+    top: 27px;
+    right: 83px;
+    
 }
  
 /* Наша команда */
@@ -349,6 +392,8 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .master-soc-link:hover,
@@ -403,6 +448,8 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    transition: border, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .company-link:hover,
@@ -412,6 +459,8 @@ img {
 
 .company-icon {
     fill: #AFB1B8;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .company-link:hover .company-icon,
@@ -457,6 +506,8 @@ img {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link {
@@ -502,7 +553,9 @@ img {
     border-radius: 50%;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .join-link:hover,
@@ -554,6 +607,8 @@ img {
     cursor: pointer;
     border-radius: 4px;
     border: 1px solid transparent;
+    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-filter:hover,
@@ -580,34 +635,114 @@ img {
     margin-right: 30px;
     margin-bottom: 30px;
     border: 1px solid #EEEEEE;
+    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.projects-list:hover,
+.projects-list:hover ,
 .projects-list:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+    0px 4px 4px rgba(0, 0, 0, 0.06), 
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+    
+}
+.projects-list:hover .projects-description {
+    transform: translateY(0%);
 
 }
 
+.projects-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+
+.projects-description {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgba(33, 150, 243, 0.9);;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.description {
+     font-size: 18px;
+     line-height: 1.56;
+     letter-spacing: 0.03em;
+     color: var(--one-background-color);
+     padding: 63px 24px;
+
+}
 
 .projects-content {
-    padding: 20px 24px;
+     padding: 20px 24px;
 
 }
 
 .projects-item {
-    margin-bottom: 4px;
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2.0;
-    letter-spacing: 0.06em;
+     margin-bottom: 4px;
+     color: var(--title-text-color);
+     font-weight: 700;
+     font-size: 18px;
+     line-height: 2.0;
+     letter-spacing: 0.06em;
 }
 
  .projects-text {
-    color: var(--primary-text-color);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
+     color: var(--primary-text-color);
+     font-weight: 400;
+     font-size: 16px;
+     line-height: 1.88;
+     letter-spacing: 0.03em;
+ }
+
+ /* --------------Стилізація модального вікна---------- */
+ 
+ .backdrop {
+     position: fixed;
+     top: 0;
+     right: 0;
+     width: 100%;
+     height: 100%;
+     background-color: rgba(0, 0, 0, 0.2);
+     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .backdrop.is-hidden {
+     opacity: 0;
+     pointer-events: none;
+ }
+
+ .modal {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     min-width: 528px;
+     min-height: 581px;
+     background-color: var(--one-background-color);
+     box-shadow: 0px 1px 3px 
+     rgba(0, 0, 0, 0.12), 0px 1px 1px 
+     rgba(0, 0, 0, 0.14), 0px 2px 1px 
+     rgba(0, 0, 0, 0.2);
+     border-radius: 4px;
+     
+ }
+
+
+ .modal-btn {
+     display: flex;
+     position: absolute;
+     top: 8px;
+     right: 8px;
+     width: 30px;
+     height: 30px;
+     justify-content: center;
+     align-items: center;
+     border: 1px solid rgba(0, 0, 0, 0.1);
+     border-radius: 50%;
+     background-color: var(--one-background-color);
+ 
  }
